ITNJ-23 #resolve #comment add text-align-center

--- a/styles/partials/About.module.scss
+++ b/styles/partials/About.module.scss
@@ -7,6 +7,7 @@ $white: #fff;
 
 h1#my-philosophy-mission-and-goals {
     font-weight: 500 !important;
+    text-align: center;
 }
 
 
